re PR c++/15044 (ICE on syntax error, template header.)

PR c++/15044
	* parser.c (cp_parser_class_head): Robustify.

	PR c++/15317
	* parser.c (cp_parser_decl_specifier_seq): Correct error in
	comment.
	(cp_parser_constructor_declarator_p): Treat attributes
	as decl-specifiers.

	PR c++/15329
	* typeck.c (build_unary_op): Do not attempt to resolve casts to
	base classes in templates.

	PR c++/15044
	* g++.dg/template/error12.C: New test.

	PR c++/15317
	* g++.dg/ext/attrib14.C: New test.

	PR c++/15329
	* g++.dg/template/ptrmem9.C: New test.

From-SVN: r82188